# bhd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
docs/design/: dream-transcript-memory-solution.md  knowledge-ingest-implementation.md  memory-review-governance.md  personal-memory-kb-system-design.md
docs/research/: personal-memory-kb-research.md
docs/usage/: graph.md  plugins.md  quickstart.md  unified-retrieval.md
examples/claude-code-plugin/: README.md
examples/claude-code-plugin/hooks/: hooks.json
examples/claude-code-plugin/scripts/: bhd_hook.py
examples/codex-plugins/bhd-memory/: README.md
examples/hooks/: README.md  capture-turn.sh  commit-session.sh  recall.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
research_repos/: README.md
src/bhd_memory/: __init__.py  asgi.py  chunking.py  cli.py  config.py  database.py  graph.py  hooks.py  jobs.py  knowledge.py  llm.py  maintenance.py  memory.py  repository.py  resources.py  retrieval.py  storage.py  utils.py
src/bhd_memory/api/: app.py  ui.py
src/bhd_memory/dream/: __init__.py  adapters.py  (+1 more)
tests/: conftest.py  test_api.py  test_api_hooks_knowledge.py  test_dream.py  test_graph.py  test_hooks_temporal.py  test_jobs_review.py  test_knowledge_acl.py  test_maintenance.py  test_memory_retrieval.py  test_resources.py
(+16 files in other folders)
